c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/if_nested_5.c
int main(void) {
    int a = 0;
    if (0)
        if (0)
            a = 3;
        else
            a = 4;
    else
        a = 1;

    return a;
}