c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_parse/mismatched_nesting.c
int main(void) {
    int a = 0;
    if (1)
        return 1;
    else
        return 2;
    else
        return 3;
}